<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey_300"
              android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_reason"
            style="@style/MyTextStyle"
            android:layout_gravity="center"
            android:elevation="5dp"
            android:text="@string/reason"/>

        <Spinner
            android:id="@+id/spinner_holidays"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:entries="@array/holidays"/>

        <TextView
            android:id="@+id/text_sex"
            style="@style/MyTextStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/sex"/>

        <RadioGroup
            android:id="@+id/radiogroup_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobutton_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/man_checked"/>

            <RadioButton
                android:id="@+id/radiobutton_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginStart="48dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/woman_checked"/>

        </RadioGroup>


        <TextView
            android:id="@+id/text_age"
            style="@style/MyTextStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/age"/>

        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/text_age_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <SeekBar
            android:id="@+id/seekbar_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>


        <TextView
            android:id="@+id/text_price"
            style="@style/MyTextStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/price"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_under"
                style="@style/MyTextStyle"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/under"/>

            <EditText
                android:id="@+id/edittext_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:nextFocusDown="@+id/button_find"/>


            <TextView
                android:id="@+id/text_BYN"
                style="@style/MyTextStyle"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/BYN"/>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/button_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:height="64dp"
        android:backgroundTint="@color/teal_600"
        android:elevation="4dp"
        android:text="@string/find"
        android:textColor="@android:color/white"/>

</LinearLayout>